--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- JS Libraries -->
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="lib/js/three.min.js"></script>
+    <script src="lib/js/orbitControls.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.6/d3.min.js"></script>
 
