Created slice of data based on plane z position

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <div class="particleDiv col-md-6">
                 <div id="scene"></div>
             </div>
+            <div class="particleDiv col-md-6">
+                <div id="slice"></div>
+            </div>
         </div>
     </div>
 
