--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 
     <!-- CSS Libraries -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./lib/css/material.icons.css" />
+    <link rel="stylesheet" href="./lib/css/materialize.min.css" />
+
     <!-- CSS Source -->
     <link rel="stylesheet" href="./src/css/main.css" />
+    
 
     <!-- JS Libraries -->
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
@@ -16,6 +20,7 @@
     <script src="lib/js/orbitControls.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.6/d3.min.js"></script>
+    <script src="./lib/js/materialize.min.js"></script>
 
     <!-- JS Source -->
     <script src="./src/js/scene.js"></script>
@@ -25,7 +30,7 @@
 </head>
 
 <body onload="App.start();">
-
+    <h3>Fluid Flow Visualization</h3>
     <div class="container-fluid">
         <div class="row">
             <div class="particleDiv col-md-6">
@@ -35,6 +40,11 @@
                 <div id="slice"></div>
             </div>
         </div>
+    </div>
+    <div class="row">
+        <p class="range-field">
+          <input type="range" id="slider" min="0" max="100" />
+        </p>
     </div>
 
 </body>
