Attach behavior to slider and updated svg points with d3

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="row">
         <p class="range-field">
-          <input type="range" id="slider" min="0" max="100" />
+          <input type="range" id="slider" min="-5" max="5" step="0.1" />
         </p>
     </div>
 
