--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset=utf-8>
 
@@ -12,10 +13,10 @@
 
     <!-- CSS Source -->
     <link rel="stylesheet" href="./src/css/main.css" />
-    
+
 
     <!-- JS Libraries -->
-    <script   src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="lib/js/three.min.js"></script>
     <script src="lib/js/orbitControls.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -30,7 +31,7 @@
 </head>
 
 <body onload="App.start();">
-    <h3>Fluid Flow Visualization</h3>
+    <h4 class="center-align">Fluid Flow Visualization</h4>
     <div class="container-fluid">
         <div class="row">
             <div class="particleDiv col-md-6">
@@ -41,11 +42,20 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <p class="range-field">
-          <input type="range" id="slider" min="-5" max="5" step="0.1" />
-        </p>
-    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col s10">
+                <p class="range-field">
+                    <input type="range" id="slider" min="-5" max="5" step="0.1" />
+                </p>
+            </div>
 
+            <div class="col s2">
+                <a id="resetBtn" class="btn-floating btn-small waves-effect waves-light teal accent-4 tooltipped" data-position="right" data-tooltip="Reset points color"><i
+                        class="material-icons">color_lens</i></a>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
