Added camera rotation around scene

--- a/index.html
+++ b/index.html
@@ -51,21 +51,25 @@
             </div>
 
             <div class="col s1">
-                <a id="resetBtn" class="btn-floating btn-large waves-effect waves-light teal accent-4 tooltipped"
+                <a id="resetBtn" class="btn-floating btn-large waves-effect waves-light teal darken-3 accent-4 tooltipped"
                     data-position="right" data-tooltip="Reset points color"><i class="material-icons">color_lens</i></a>
             </div>
             <div class="col s1">
-                <a id="infoBtn" class="btn-floating btn-large waves-effect waves-light teal accent-4 modal-trigger"
+                <a id="infoBtn" class="btn-floating btn-large waves-effect waves-light teal darken-3 accent-4 modal-trigger"
                     data-target="modal1" data-position="right" data-tooltip="Open info"><i
                         class="material-icons">info</i></a>
             </div>
             
         </div>
     </div>
-    <div id="modal1" class="modal teal">
+    <div id="modal1" class="modal teal darken-3">
             <div class="modal-content">
-                <h4>Modal Header</h4>
-                <p>A bunch of text</p>
+                <h4>Additional information</h4>
+                <p>This interactive visualization application is created with three.js and d3.js.</p>
+                <p>The dataset is experiment of viscous fingers observations by the <a href="https://www.sdsc.edu/">San Diego Supercomputing Center</a></p>
+                <p><a href="https://www.uni-kl.de/sciviscontest/">Learn more</a></p>
+
+
             </div>
             <!-- <div class="modal-footer"> -->
                 <!-- <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a> -->
